--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ionic/app-scripts",
-  "version": "3.2.4",
+  "name": "@jungalwala/app-scripts",
+  "version": "3.2.5",
   "description": "Scripts for Ionic Projects",
   "homepage": "https://ionicframework.com/",
   "author": "Ionic Team <hi@ionic.io> (https://ionic.io)",
@@ -42,7 +42,7 @@
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
     "json-loader": "^0.5.7",
-    "node-sass": "^4.10.0",
+    "node-sass": "^6.0.1",
     "os-name": "^2.0.1",
     "postcss": "^6.0.21",
     "proxy-middleware": "^0.15.0",
@@ -78,7 +78,7 @@
     "@types/jest": "^21.1.5",
     "@types/mock-fs": "^3.6.30",
     "@types/node": "^8.10.9",
-    "@types/node-sass": "^3.10.32",
+    "@types/node-sass": "^4.11.3",
     "@types/rewire": "^2.5.27",
     "@types/webpack": "^3.8.11",
     "@types/ws": "^3.2.0",
