fix compile issues

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "main": "dist/index.js",
   "dependencies": {
     "@angular-devkit/build-optimizer": "0.0.35",
+    "@types/express-serve-static-core": "^4.16.11",
+    "@types/minimatch": "^3.0.3",
     "autoprefixer": "^7.2.6",
     "chalk": "^2.4.0",
     "chokidar": "^2.0.4",
@@ -77,8 +79,8 @@
     "@types/glob": "^5.0.35",
     "@types/jest": "^21.1.5",
     "@types/mock-fs": "^3.6.30",
-    "@types/node": "^8.10.9",
-    "@types/node-sass": "^4.11.3",
+    "@types/node": "^12.12.6",
+    "@types/node-sass": "^3.10.32",
     "@types/rewire": "^2.5.27",
     "@types/webpack": "^3.8.11",
     "@types/ws": "^3.2.0",
