--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jungalwala/app-scripts",
-  "version": "3.2.8",
+  "version": "3.2.9",
   "description": "Scripts for Ionic Projects",
   "homepage": "https://ionicframework.com/",
   "author": "Ionic Team <hi@ionic.io> (https://ionic.io)",
@@ -32,7 +32,7 @@
   "main": "dist/index.js",
   "dependencies": {
     "@angular-devkit/build-optimizer": "0.0.35",
-    "@types/express-serve-static-core": "^4.16.11",
+    "@types/express-serve-static-core": "4.17.35",
     "@types/mime": "^2.0.1",
     "@types/minimatch": "^3.0.3",
     "autoprefixer": "^7.2.6",
@@ -55,8 +55,8 @@
     "rollup-plugin-node-resolve": "3.0.0",
     "source-map": "^0.6.1",
     "tiny-lr": "^1.1.1",
-    "tslint": "^5.8.0",
-    "tslint-eslint-rules": "^4.1.1",
+    "tslint": "^6.1.3",
+    "tslint-eslint-rules": "^5.4.0",
     "uglify-es": "3.2.2",
     "webpack": "3.12.0",
     "ws": "3.3.2",
@@ -94,8 +94,8 @@
     "rimraf": "^2.6.1",
     "rxjs": "^5.5.10",
     "sw-toolbox": "^3.6.0",
-    "tslint-ionic-rules": "0.0.8",
-    "typescript": "~2.4.2",
+    "tslint-ionic-rules": "^0.0.8",
+    "typescript": "4.5.5",
     "zone.js": "^0.8.26"
   },
   "repository": {
