--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jungalwala/app-scripts",
-  "version": "3.1.13",
+  "version": "3.2.13",
   "description": "Scripts for Ionic Projects",
   "homepage": "https://ionicframework.com/",
   "author": "Ionic Team <hi@ionic.io> (https://ionic.io)",
@@ -28,7 +28,8 @@
     "sass-watch": "npm run sass && node-sass ./src/dev-client/sass/ion-dev.scss --watch --output ./bin/ --output-style compressed",
     "test": "jest",
     "watch": "npm run clean && tsc --watch & npm run sass-watch",
-    "postinstall": "mkdir -p ./node_modules/@ionic; ln -s ./node_modules/@jungalwala/app-scripts ./node_modules/@ionic/app-scripts"
+    "postinstall": "mkdir -p ./node_modules/@ionic; ln -s ./node_modules/@jungalwala/app-scripts ./node_modules/@ionic/app-scripts",
+    "publish": "git add . ; git commit -am 'Preparing for release'; git push; npm run build; npm run test; CV=$(npm pkg get version | tr -d '\"'); npm version patch --no-git-tag-version; npm run changelog; git add . ; git commit -am 'Preparing for release 2'; git push; npm version $CV --no-git-tag-version; npm version patch; npm run github-release; npm publish; git push origin master"
   },
   "main": "dist/index.js",
   "dependencies": {
